Handle case that network status returned asynchronously in ForceSigninVerifier.

When the GetConnectionType returns asynchronously, verification request is never
sent because the default network type is CONNECTION_NONE and there is no network
change notification later either.

Resolves the issue by handling the callback from the API.

Also
1) Separate network check from others so that we don't fetch network type again
   when we know it.
2) Rewrite the unittest to use more fake services instead of stun value. It
   increase the code coverage. Including SigninManager, ProfileOAuth2TokenService
   and TestNetworkConnectionTracker.

Bug: 891817
Change-Id: Iebdc5bbc30e699b347d6a343bb6f4c979fbe1596
Reviewed-on: https://chromium-review.googlesource.com/c/1259542
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Commit-Queue: Owen Min <zmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597560}