chrome/browser/signin/force_signin_verifier.cc
@@ -93,8 +93,7 @@ void ForceSigninVerifier::OnConnectionChanged(
   if (backoff_request_timer_.IsRunning())
     backoff_request_timer_.Stop();
 
-  if (type != network::mojom::ConnectionType::CONNECTION_NONE)
-    SendRequest();
+  SendRequestIfNetworkAvailable(type);
 }
 
 void ForceSigninVerifier::Cancel() {
@@ -109,8 +108,21 @@ bool ForceSigninVerifier::HasTokenBeenVerified() {
 }
 
 void ForceSigninVerifier::SendRequest() {
-  if (!ShouldSendRequest())
+  auto type = network::mojom::ConnectionType::CONNECTION_NONE;
+  if (content::GetNetworkConnectionTracker()->GetConnectionType(
+          &type,
+          base::BindOnce(&ForceSigninVerifier::SendRequestIfNetworkAvailable,
+                         base::Unretained(this)))) {
+    SendRequestIfNetworkAvailable(type);
+  }
+}
+
+void ForceSigninVerifier::SendRequestIfNetworkAvailable(
+    network::mojom::ConnectionType network_type) {
+  if (network_type == network::mojom::ConnectionType::CONNECTION_NONE ||
+      !ShouldSendRequest()) {
     return;
+  }
 
   std::string account_id = signin_manager_->GetAuthenticatedAccountId();
   OAuth2TokenService::ScopeSet oauth2_scopes;
@@ -120,11 +132,7 @@ void ForceSigninVerifier::SendRequest() {
 }
 
 bool ForceSigninVerifier::ShouldSendRequest() {
-  auto type = network::mojom::ConnectionType::CONNECTION_NONE;
-  content::GetNetworkConnectionTracker()->GetConnectionType(&type,
-                                                            base::DoNothing());
   return !has_token_verified_ && access_token_request_.get() == nullptr &&
-         type != network::mojom::ConnectionType::CONNECTION_NONE &&
          signin_manager_->IsAuthenticated();
 }
 
